@@ -1,4 +1,15 @@
 
+2021-01-27  Ron Norman <rjn@inglenet.com>
+
+	* sqlxfdgen.c: Verify supplied SQL column name has no conflicts
+				Fixes for COMP-6 fields
+				New options for the first XFD of a record.
+				KEEP FILLER - indicates to keep and morph the name 
+					of FILLER fields, otherwise FILLER does not
+					go into the SQL table.
+				KEEP PREFIX - indicates to keep the common prefix
+					of fields in the record. The default is to remove it.
+
 2021-01-22  Ron Norman <rjn@inglenet.com>
 
 	* sqlxfdgen.c (get_col_name): Gives Warning when FILLER used
